Fixed alignment of addAlgo button and entered default data in Card

--- a/src/Components/BasicTabs/BasicTabs.css
+++ b/src/Components/BasicTabs/BasicTabs.css
@@ -71,3 +71,11 @@
     box-sizing: border-box;
 }
 
+.addAlgorithmSubContainer {
+    height: 100%; 
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
